Web scraper can now load playstore and search for game

--- a/data_scraping.ipynb
+++ b/data_scraping.ipynb
@@ -2,137 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup\n",
-    "import requests\n",
-    "import selenium"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = 'https://play.google.com/store/apps/details?id=com.activision.callofduty.shooter'\n",
-    "\n",
-    "data = {\n",
-    "    'ajax': 'true',\n",
-    "    'mobile': 'false',\n",
-    "}\n",
-    "\n",
-    "result = requests.get(url, data=data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<!DOCTYPE html>\\n<html lang=en>\\n  <meta charset=utf-8>\\n  <meta name=viewport content=\"initial-scale=1, minimum-scale=1, width=device-width\">\\n  <title>Error 400 (Bad Request)!!1</title>\\n  <style>\\n    *{margin:0;padding:0}html,code{font:15px/22px arial,sans-serif}html{background:#fff;color:#222;padding:15px}body{margin:7% auto 0;max-width:390px;min-height:180px;padding:30px 0 15px}* > body{background:url(//www.google.com/images/errors/robot.png) 100% 5px no-repeat;padding-right:205px}p{margin:11px 0 22px;overflow:hidden}ins{color:#777;text-decoration:none}a img{border:0}@media screen and (max-width:772px){body{background:none;margin-top:0;max-width:none;padding-right:0}}#logo{background:url(//www.google.com/images/branding/googlelogo/1x/googlelogo_color_150x54dp.png) no-repeat;margin-left:-5px}@media only screen and (min-resolution:192dpi){#logo{background:url(//www.google.com/images/branding/googlelogo/2x/googlelogo_color_150x54dp.png) no-repeat 0% 0%/100% 100%;-moz-border-image:url(//www.google.com/images/branding/googlelogo/2x/googlelogo_color_150x54dp.png) 0}}@media only screen and (-webkit-min-device-pixel-ratio:2){#logo{background:url(//www.google.com/images/branding/googlelogo/2x/googlelogo_color_150x54dp.png) no-repeat;-webkit-background-size:100% 100%}}#logo{display:inline-block;height:54px;width:150px}\\n  </style>\\n  <a href=//www.google.com/><span id=logo aria-label=Google></span></a>\\n  <p><b>400.</b> <ins>That’s an error.</ins>\\n  <p>Your client has issued a malformed or illegal request.  <ins>That’s all we know.</ins>\\n'"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result.text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc = BeautifulSoup(result.text, 'lxml')\n",
-    "tags = doc.find_all('div', class_ = 'h3YV2d')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for tag in tags:\n",
-    "    print(tag.text,'\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\samsung\\AppData\\Local\\Temp\\ipykernel_44972\\1653784280.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  driver = webdriver.Chrome(PATH)\n"
-     ]
-    }
-   ],
-   "source": [
+    "# import selenium\n",
     "from selenium import webdriver\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.webdriver.common.action_chains import ActionChains\n",
     "PATH = 'C:\\Program Files (x86)\\chromedriver.exe'\n",
-    "driver = webdriver.Chrome(PATH)\n",
     "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# url to google playstore games page\n",
+    "url = 'https://play.google.com/store/games'\n",
+    "\n",
+    "# Initialization of web driver\n",
+    "driver = webdriver.Chrome(PATH)\n",
     "driver.get(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 157,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\samsung\\AppData\\Local\\Temp\\ipykernel_44972\\3492029479.py:1: DeprecationWarning: find_element_by_class_name is deprecated. Please use find_element(by=By.CLASS_NAME, value=name) instead\n",
-      "  review = driver.find_element_by_class_name('h3YV2d')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "review = driver.find_element_by_class_name('h3YV2d')\n",
-    "# driver.find_element(by=By.class, value='h3YV2d')"
+    "# Finds the search icon by ID and clicks on it\n",
+    "search_icon = driver.find_element_by_class_name(\"google-material-icons.r9optf\")\n",
+    "search_icon.click()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "review.text"
+    "game_name = \"call of duty\"\n",
+    "\n",
+    "# Enter game name into search bar and hits enter\n",
+    "search_box = driver.find_element_by_class_name(\"HWAcU\")\n",
+    "search_box.clear() # Clear search box\n",
+    "enter_game_name = search_box.send_keys(game_name)\n",
+    "search_box.send_keys(Keys.ENTER) # Clicks enter for search box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data_box = driver.find_element_by_class_name(\"Qfxief\")\n",
+    "# ActionChains(driver).move_to_element(data_box).click()"
    ]
   }
  ],
