more on special characters handling

--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "4  An annoying experience all round. Ever since t...        1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "max       5.000000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "4  An annoying experience all round. Ever since t...        1          0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
        "Name: satisfied, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,15 +412,25 @@
     "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: x.lower())\n",
     "\n",
     "# Removing special characters\n",
-    "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: x.replace(\",\", \"\").replace(\":\", \"\").replace(\".\", \"\").replace(\"'\", \"\"))\n",
+    "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: x.replace(\",\", \"\").replace(\":\", \"\").replace(\".\", \"\")\n",
+    ".replace(\"'\", \"\").replace(\"%\", \"\").replace(\";\", \"\").replace(\"/\", \"\").replace('\"', \"\").replace(\"(\", \"\")\n",
+    ".replace(\")\", \"\").replace(\"!\", \"\").replace(\"+\", \"\").replace(\"@\", \"\"))\n",
     "\n",
-    "# Removing stop words\n",
-    "\n"
+    "# Removing numbers\n",
+    "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: re.sub(r'[0-9]+', \"\", x))\n",
+    "\n",
+    "# Removing white space\n",
+    "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: x.strip())\n",
+    "\n",
+    "# replacing emojis with text\n",
+    "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: x.replace(\"😎\", \"cool_face\").replace(\"😴\", \"sleepy_face\")\n",
+    ".replace(\"👍\", \"thumbe_up\").replace(\"👎\", \"thumbs_down\").replace(\"👌\", \"nice\").replace(\"🖕\", \"middle_finger\")\n",
+    ".replace(\"\",\"\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +503,7 @@
        "4  an annoying experience all round ever since th...        1          0"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,22 +514,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'hello i would love to see a 3rd person team death match  no classes  infinite plates that would be great for warm ups and sharpening skills i dont like that the game doesnt have a br training area this would be great for battle royal beginners i know mp mode has a practice mode in 1st person but its not the same also it would be great if players could save multiple button layouts sometimes you want to try something new without tampering with your current setup'"
+       "'great game top graphics but can do with some bugs fixes more assault rifles add attack choppers in game also would be nice if we could carry  firearms and we would appreciate it if we in africa had our own server since we suffer a lot against players from other countries since they have much higher ping than we do'"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test = data[\"reviews\"][100]\n",
+    "test = data[\"reviews\"][2530]\n",
     "# 8\n",
     "test"
    ]
