More special character and emoji handling

--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -408,24 +408,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Making all texts lowercase\n",
+    "# Making all texts lowercase.\n",
     "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: x.lower())\n",
     "\n",
-    "# Removing special characters\n",
+    "# Removing special characters.\n",
     "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: x.replace(\",\", \"\").replace(\":\", \"\").replace(\".\", \"\")\n",
     ".replace(\"'\", \"\").replace(\"%\", \"\").replace(\";\", \"\").replace(\"/\", \"\").replace('\"', \"\").replace(\"(\", \"\")\n",
-    ".replace(\")\", \"\").replace(\"!\", \"\").replace(\"+\", \"\").replace(\"@\", \"\"))\n",
+    ".replace(\")\", \"\").replace(\"!\", \"\").replace(\"+\", \"\").replace(\"@\", \"\").replace(\"*\", \"\").replace(\"$\", \"\")\n",
+    ".replace(\"&\", \"\").replace(\"-\", \"\").replace(\"?\", \"\").replace(\"\", \"\"))\n",
     "\n",
-    "# Removing numbers\n",
+    "# Removing numbers.\n",
     "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: re.sub(r'[0-9]+', \"\", x))\n",
     "\n",
     "# Removing white space\n",
     "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: x.strip())\n",
     "\n",
-    "# replacing emojis with text\n",
+    "# replacing emojis with text.\n",
+    "# These emojis are emojis that I found to be specific to CODSM reviews.\n",
     "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: x.replace(\"😎\", \"cool_face\").replace(\"😴\", \"sleepy_face\")\n",
     ".replace(\"👍\", \"thumbe_up\").replace(\"👎\", \"thumbs_down\").replace(\"👌\", \"nice\").replace(\"🖕\", \"middle_finger\")\n",
-    ".replace(\"\",\"\"))"
+    ".replace(\"😆\", \"excitement\").replace(\"😅\", \"awkward\").replace(\"⭐\", \"star\").replace(\"💯\", \"approval\")\n",
+    ".replace(\"🤘\", \"cool\").replace(\"😉\", \"wink_face\").replace(\"❤\", \"love\").replace(\"😁\", \"cheer\")\n",
+    ".replace(\"🎮\", \"controller\").replace(\"🌟\", \"glowing_star\").replace(\"😂\", \"laughing_face\")\n",
+    ".relace(\"🙃\", \"upside-down-face\").replace(\"🤭\", \"surprise_face\").replace(\"😝\", \"playful_face\")\n",
+    ".replace(\"😩\", \"exhaustion_face\").replace(\"❤️\", \"love\").replace(\"😍\", \"adoration\").replace(\"🙏\", \"pray\")\n",
+    ".replace(\"🙄\", \"rolling_eyes\").replace(\"😭\", \"crying_face\").replace(\"😑\", \"neutral_face\").replace(\"😏\", \"smirk_face\")\n",
+    ".replace(\"😡\", \"angry_face\").replace(\"😪\", \"sleepy_face\").replace(\"😓\", \"frustration_face\").replace(\"😀\", \"cheer_face\")\n",
+    ".replace(\"😒\", \"unasumed_face\").replace(\" 🏝\", \"desert_island\").replace(\"🥴\", \"woozy_face\").replace(\"😊\", \"smiling_face\")\n",
+    ".replace(\"🥰\", \"feeling_loved\").replace(\"😃\", \"cheer_face\").replace(\"🤬\",  \"being_vulgar\").replace(\"🥺\", \"pleeding_face\")\n",
+    ".replace(\"🤣\", \"floor_laughing\").replace(\"😔\", \"dissapointed_face\").replace(\"🤞\", \"for_luck\").replace(\"🤡\", \"clown_face\")\n",
+    ".replace(\"😤\", \"highly_annoyed\").replace(\"👿\", \"angry_face_with_horns\").replace(\"🙂\", \"weird_smile\")\n",
+    ".replace(\"💪\", \"flexed_biceps\").replace(\"🤯\", \"mind_blown\"))"
    ]
   },
   {
@@ -514,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +536,7 @@
        "'great game top graphics but can do with some bugs fixes more assault rifles add attack choppers in game also would be nice if we could carry  firearms and we would appreciate it if we in africa had our own server since we suffer a lot against players from other countries since they have much higher ping than we do'"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,6 +546,13 @@
     "# 8\n",
     "test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
