Minor comment adjustment

--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -424,7 +424,7 @@
     "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: x.strip())\n",
     "\n",
     "# replacing emojis with text.\n",
-    "# These emojis are emojis that I found to be specific to CODSM reviews.\n",
+    "# These emojis are emojis that I found to be most common to CODM reviews.\n",
     "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: x.replace(\"😎\", \"cool_face\").replace(\"😴\", \"sleepy_face\")\n",
     ".replace(\"👍\", \"thumbe_up\").replace(\"👎\", \"thumbs_down\").replace(\"👌\", \"nice\").replace(\"🖕\", \"middle_finger\")\n",
     ".replace(\"😆\", \"excitement\").replace(\"😅\", \"awkward\").replace(\"⭐\", \"star\").replace(\"💯\", \"approval\")\n",
