Word tokenization and removal of stop words complete

--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,13 @@
     "import nltk\n",
     "import pandas as pd\n",
     "from nltk.corpus import stopwords\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "from nltk.tokenize import word_tokenize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +100,7 @@
        "4  An annoying experience all round. Ever since t...        1"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +154,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +241,7 @@
        "max       5.000000"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +336,7 @@
        "4  An annoying experience all round. Ever since t...        1          0"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +359,7 @@
        "Name: satisfied, dtype: int64"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -404,18 +405,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Making all texts lowercase.\n",
     "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: x.lower())\n",
-    "\n",
-    "# Removing special characters.\n",
-    "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: x.replace(\",\", \"\").replace(\":\", \"\").replace(\".\", \"\")\n",
-    ".replace(\"'\", \"\").replace(\"%\", \"\").replace(\";\", \"\").replace(\"/\", \"\").replace('\"', \"\").replace(\"(\", \"\")\n",
-    ".replace(\")\", \"\").replace(\"!\", \"\").replace(\"+\", \"\").replace(\"@\", \"\").replace(\"*\", \"\").replace(\"$\", \"\")\n",
-    ".replace(\"&\", \"\").replace(\"-\", \"\").replace(\"?\", \"\").replace(\"\", \"\"))\n",
     "\n",
     "# Removing numbers.\n",
     "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: re.sub(r'[0-9]+', \"\", x))\n",
@@ -425,25 +420,38 @@
     "\n",
     "# replacing emojis with text.\n",
     "# These emojis are emojis that I found to be most common to CODM reviews.\n",
-    "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: x.replace(\"😎\", \"cool_face\").replace(\"😴\", \"sleepy_face\")\n",
-    ".replace(\"👍\", \"thumbe_up\").replace(\"👎\", \"thumbs_down\").replace(\"👌\", \"nice\").replace(\"🖕\", \"middle_finger\")\n",
-    ".replace(\"😆\", \"excitement\").replace(\"😅\", \"awkward\").replace(\"⭐\", \"star\").replace(\"💯\", \"approval\")\n",
-    ".replace(\"🤘\", \"cool\").replace(\"😉\", \"wink_face\").replace(\"❤\", \"love\").replace(\"😁\", \"cheer\")\n",
-    ".replace(\"🎮\", \"controller\").replace(\"🌟\", \"glowing_star\").replace(\"😂\", \"laughing_face\")\n",
-    ".relace(\"🙃\", \"upside-down-face\").replace(\"🤭\", \"surprise_face\").replace(\"😝\", \"playful_face\")\n",
-    ".replace(\"😩\", \"exhaustion_face\").replace(\"❤️\", \"love\").replace(\"😍\", \"adoration\").replace(\"🙏\", \"pray\")\n",
-    ".replace(\"🙄\", \"rolling_eyes\").replace(\"😭\", \"crying_face\").replace(\"😑\", \"neutral_face\").replace(\"😏\", \"smirk_face\")\n",
-    ".replace(\"😡\", \"angry_face\").replace(\"😪\", \"sleepy_face\").replace(\"😓\", \"frustration_face\").replace(\"😀\", \"cheer_face\")\n",
-    ".replace(\"😒\", \"unasumed_face\").replace(\" 🏝\", \"desert_island\").replace(\"🥴\", \"woozy_face\").replace(\"😊\", \"smiling_face\")\n",
-    ".replace(\"🥰\", \"feeling_loved\").replace(\"😃\", \"cheer_face\").replace(\"🤬\",  \"being_vulgar\").replace(\"🥺\", \"pleeding_face\")\n",
-    ".replace(\"🤣\", \"floor_laughing\").replace(\"😔\", \"dissapointed_face\").replace(\"🤞\", \"for_luck\").replace(\"🤡\", \"clown_face\")\n",
-    ".replace(\"😤\", \"highly_annoyed\").replace(\"👿\", \"angry_face_with_horns\").replace(\"🙂\", \"weird_smile\")\n",
-    ".replace(\"💪\", \"flexed_biceps\").replace(\"🤯\", \"mind_blown\"))"
+    "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: x.replace(\"😎\", \" cool_face \").replace(\"😴\", \" sleepy_face \")\n",
+    ".replace(\"👍\", \" thumbs_up \").replace(\"👎\", \" thumbs_down \").replace(\"👌\", \" nice \").replace(\"🖕\", \" middle_finger \")\n",
+    ".replace(\"😆\", \" excitement \").replace(\"😅\", \" awkward \").replace(\"⭐\", \" star \").replace(\"💯\", \" approval \")\n",
+    ".replace(\"🤘\", \" cool \").replace(\"😉\", \" wink_face \").replace(\"❤\", \" love \").replace(\"😁\", \" cheer \")\n",
+    ".replace(\"🎮\", \" controller \").replace(\"🌟\", \" glowing_star \").replace(\"😂\", \" laughing_face \")\n",
+    ".replace(\"🙃\", \" upside-down-face\").replace(\"🤭\", \" surprise_face \").replace(\"😝\", \" playful_face \")\n",
+    ".replace(\"😩\", \" exhaustion_face \").replace(\"❤️\", \" love \").replace(\"😍\", \" adoration \").replace(\"🙏\", \" pray \")\n",
+    ".replace(\"🙄\", \" rolling_eyes \").replace(\"😭\", \" crying_face \").replace(\"😑\", \" neutral_face \").replace(\"😏\", \" smirk_face \")\n",
+    ".replace(\"😡\", \" angry_face \").replace(\"😪\", \" sleepy_face \").replace(\"😓\", \" frustration_face \").replace(\"😀\", \" cheer_face \")\n",
+    ".replace(\"😒\", \" unasumed_face \").replace(\" 🏝\", \" desert_island \").replace(\"🥴\", \" woozy_face \").replace(\"😊\", \" smiling_face \")\n",
+    ".replace(\"🥰\", \" feeling_loved \").replace(\"😃\", \" cheer_face \").replace(\"🤬\",  \" being_vulgar \").replace(\"🥺\", \" pleeding_face \")\n",
+    ".replace(\"🤣\", \" floor_laughing \").replace(\"😔\", \" dissapointed_face \").replace(\"🤞\", \" for_luck \").replace(\"🤡\", \" clown_face \")\n",
+    ".replace(\"😤\", \" highly_annoyed \").replace(\"👿\", \" angry_face_with_horns \").replace(\"🙂\", \" weird_smile \").replace(\"😊\", \" happy \")\n",
+    ".replace(\"💪\", \" flexed_biceps \").replace(\"🤯\", \" mind_blown \").replace(\"📌\", \"pin\").replace(\"😋\", \" tongue_out \"))\n",
+    "\n",
+    "# Removing special characters.\n",
+    "data[\"reviews\"] = data[\"reviews\"].apply(lambda x: x.replace(\",\", \" \").replace(\":\", \" \").replace(\".\", \" \")\n",
+    ".replace(\"'\", \" \").replace(\"%\", \" \").replace(\";\", \" \").replace(\"/\", \" \").replace('\"', \" \").replace(\"(\", \" \")\n",
+    ".replace(\")\", \" \").replace(\"!\", \" \").replace(\"+\", \" \").replace(\"@\", \" \").replace(\"*\", \" \").replace(\"$\", \" \")\n",
+    ".replace(\"&\", \" \").replace(\"-\", \" \").replace(\"?\", \" \").replace(\"#\", \" \").replace(\"  \", \" \"))\n",
+    "\n",
+    "# word tokenization\n",
+    "text_tokens = data[\"reviews\"].apply(lambda review : word_tokenize(review, language=\"english\"))\n",
+    "\n",
+    "# removal of stop words\n",
+    "stop = stopwords.words('english')\n",
+    "data[\"final_tokens\"] = data['reviews'].apply(lambda x: ' '.join([word for word in x.lower().split() if word not in (stop)]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -470,53 +478,66 @@
        "      <th>reviews</th>\n",
        "      <th>ratings</th>\n",
        "      <th>satisfied</th>\n",
+       "      <th>final_tokens</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>ive been playing for years now and its been qu...</td>\n",
+       "      <td>i ve been playing for years now and it s been ...</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
+       "      <td>playing years quite addictive u developers pls...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>an annoying experience all round ever since th...</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>annoying experience round ever since update se...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>i love the game though its close to real but t...</td>\n",
+       "      <td>i love the game though it s close to real but ...</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>love game though close real greatest problem c...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>ive been playing for years now and its been qu...</td>\n",
+       "      <td>i ve been playing for years now and it s been ...</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
+       "      <td>playing years quite addictive u developers pls...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>an annoying experience all round ever since th...</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>annoying experience round ever since update se...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             reviews  ratings  satisfied\n",
-       "0  ive been playing for years now and its been qu...        4          1\n",
-       "1  an annoying experience all round ever since th...        1          0\n",
-       "2  i love the game though its close to real but t...        3          1\n",
-       "3  ive been playing for years now and its been qu...        4          1\n",
-       "4  an annoying experience all round ever since th...        1          0"
+       "                                             reviews  ratings  satisfied  \\\n",
+       "0  i ve been playing for years now and it s been ...        4          1   \n",
+       "1  an annoying experience all round ever since th...        1          0   \n",
+       "2  i love the game though it s close to real but ...        3          1   \n",
+       "3  i ve been playing for years now and it s been ...        4          1   \n",
+       "4  an annoying experience all round ever since th...        1          0   \n",
+       "\n",
+       "                                        final_tokens  \n",
+       "0  playing years quite addictive u developers pls...  \n",
+       "1  annoying experience round ever since update se...  \n",
+       "2  love game though close real greatest problem c...  \n",
+       "3  playing years quite addictive u developers pls...  \n",
+       "4  annoying experience round ever since update se...  "
       ]
      },
-     "execution_count": 174,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,32 +548,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'great game top graphics but can do with some bugs fixes more assault rifles add attack choppers in game also would be nice if we could carry  firearms and we would appreciate it if we in africa had our own server since we suffer a lot against players from other countries since they have much higher ping than we do'"
-      ]
-     },
-     "execution_count": 187,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "simply love game graphics good never boring thanks events also nerf persistence made modes hardpoint domination playable problem since last update season ping issue sometimes match much often enter gunfight ping flies ms ms making lose gunfight overall highly recommend downloading one best mobile experiences \n",
+      "\n",
+      "i m simply in love with this game the graphics are good never boring thanks to the events also there was the nerf of persistence that made the modes hardpoint and domination playable again the only problem i have since the last update of season  is the ping issue sometimes during a match much more often when i enter a gunfight my ping flies from ms to ms making me lose the gunfight but overall i highly recommend downloading it for one of the best mobile experiences \n"
+     ]
     }
    ],
    "source": [
-    "test = data[\"reviews\"][2530]\n",
+    "test = data[\"final_tokens\"][9]\n",
+    "actual = data[\"reviews\"][9]\n",
     "# 8\n",
-    "test"
+    "print(test, \"\\n\")\n",
+    "print(actual)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# print(stopwords.words('english'))"
+   ]
   }
  ],
  "metadata": {
